# ifcb-pytorch-classify

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
configs/: infer_default.yaml  train_default.yaml
src/ifcb_classify/: __init__.py  __main__.py  checkpoint.py  cli.py  config.py  device.py  hdf5_output.py  infer.py  metrics.py  normalise.py  plots.py  seed.py  sweep.py  thresholds.py  train.py
src/ifcb_classify/data/: __init__.py  datasets.py  ifcb_bin.py  transforms.py
src/ifcb_classify/models/: __init__.py  factory.py  registry.py
src/ifcb_classify/tracking/: __init__.py  base.py  csv_tracker.py  mlflow_tracker.py  wandb_tracker.py
tests/: conftest.py  test_checkpoint.py  test_cli.py  test_config.py  test_datasets.py  test_datasets_fixtures.py  test_device.py  test_hdf5_output.py  test_ifcb_bin.py  test_infer_integration.py  test_metrics.py  test_models_registry.py  test_normalise.py  test_plots.py  test_seed.py  test_sweep.py  test_thresholds.py  test_tracking.py  test_train_integration.py  test_transforms.py
tests/fixtures/bins/: D20220519T124533_IFCB134.adc  D20220519T124533_IFCB134.hdr  D20220519T124533_IFCB134.roi
